<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="userViewModel"
        type="com.edu.unab.mgads.henryf.storapp.viewmodel.UserViewModel" />
</data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.UserFormActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.UserFormActivity">

            <TextView
                android:id="@+id/tv_title_product_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_new_user_user_form"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:layout_marginVertical="32dp" />

            <EditText
                android:id="@+id/et_name_user_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_product_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_name_user_form"
                android:layout_marginVertical="8dp"
                android:text="@={userViewModel.suName}"/>

            <EditText
                android:id="@+id/et_email_user_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/et_name_user_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_email"
                android:layout_marginVertical="8dp"
                android:text="@={userViewModel.suEmail}"/>

            <EditText
                android:id="@+id/et_document_user_form"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintTop_toBottomOf="@id/et_email_user_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_document_user_form"
                android:layout_marginVertical="8dp"
                android:text="@={userViewModel.suDocument}"/>

            <EditText
                android:id="@+id/et_urlphoto_user_form"
                android:layout_marginHorizontal="32dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/et_document_user_form"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="textMultiLine"
                android:hint="@string/hint_urlphoto_user_form"
                android:layout_marginVertical="8dp"
                android:text="@={userViewModel.suUrlPicture}"/>

            <EditText
                android:id="@+id/et_password_user_form"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:ems="10"
                android:hint="@string/hint_password_user_form"
                android:inputType="textPassword"
                android:text="@={userViewModel.suPassword}"
                app:layout_constraintTop_toBottomOf="@id/et_urlphoto_user_form"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/bt_create_user_form"
                android:layout_marginVertical="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/create_user_form"
                app:layout_constraintTop_toBottomOf="@+id/et_password_user_form"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>