<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="com.edu.unab.mgads.henryf.storapp.model.entity.Product" />
        <import type="com.edu.unab.mgads.henryf.storapp.view.adapter.BindAdapter"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ProductFormActivity">

        <TextView
            android:id="@+id/tv_title_product_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_add_product"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:layout_marginVertical="16dp" />

        <EditText
            android:id="@+id/et_name_product_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_product_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_name_product_form"
            android:layout_marginVertical="8dp"
            android:text="@={product.name}"/>

        <EditText
            android:id="@+id/et_price_product_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/et_name_product_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_price_product_form"
            android:layout_marginVertical="8dp"
            android:text="@={BindAdapter.doubleToString(product.price)}"/>

        <EditText
            android:id="@+id/et_url_product_form"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/et_price_product_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_name_product_form"
            android:layout_marginVertical="8dp"
            android:text="@={product.urlImage}"/>

        <EditText
            android:id="@+id/et_description_product_form"
            android:layout_marginHorizontal="32dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_url_product_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textMultiLine"
            android:hint="@string/hint_description_product_form"
            android:layout_marginVertical="8dp"
            android:text="@={product.description}"/>

        <Button
            android:id="@+id/bt_product_form"
            android:layout_marginVertical="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_btn_add_product"
            app:layout_constraintTop_toBottomOf="@+id/et_description_product_form"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>