<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="userViewModel"
        type="com.edu.unab.mgads.henryf.storapp.viewmodel.UserViewModel" />
    <variable
        name="title"
        type="String" />
</data>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:text="@{title}"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mincapex" />

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="287dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@={userViewModel.etEmail}"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="283dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@={userViewModel.etPassword}"
            app:layout_constraintTop_toBottomOf="@id/et_email_login"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/bt_signin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_login"
            app:layout_constraintTop_toBottomOf="@id/et_password_login"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="481dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/bt_signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btn_sign_up"
            app:layout_constraintTop_toBottomOf="@id/bt_signin_login"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="553dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>